<resources>
    <string name="app_name">Orixa Oracle</string>
    <string name="title_home">Benvindo(a) ao Oraculo dos Orixas</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_caracteristica">...</string>
    <string name="text_titulo_perguntas">Click sim ou não em caso de se identificar com o seguinte: </string>
    <string name="text_switch">"Não"</string>
    <string name="text_start">"Iniciar Perguntas"</string>
    <string name="text_restart">"Re-Iniciar"</string>
    <string name="text_welcome">Benvindo(a) ao Orixa Oracle!
Para descobrir quais os seus Orixas presse Iniciar e responda às perguntas.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_orixaoracle">Orixa Oracle foi desenvolvido por potato-corp.com. A equipa investigou e entrevistou diversos mediuns de Umbanda e Candomble, com esta informacao colectada desenvolveu uma base de dados de caracteristicas de personalidades. Esta aplicacao faz-lhe diversas perguntas que usando a informacao da base de dados usa estatistica para calcular quais os Orixas mais provaveis de acordo com a sua personalidade.</string>

    <string name="title_activity_fullscreen_about">Sobre Nos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_orixas_info">Orixas</string>
    <string name="tab_text_1">Elegbara</string>
    <string name="tab_text_2">Ogum</string>
    <string name="tab_text_3">Oxumare</string>
    <string name="tab_text_4">Xango</string>
    <string name="tab_text_5">Obaluaie</string>
    <string name="tab_text_6">Oxossi</string>
    <string name="tab_text_7">Ossaim</string>
    <string name="tab_text_8">Oba</string>
    <string name="tab_text_9">Nana</string>
    <string name="tab_text_10">Oxum</string>
    <string name="tab_text_11">Yemanja</string>
    <string name="tab_text_12">Ewa</string>
    <string name="tab_text_13">Iansa</string>
    <string name="tab_text_14">Tempo</string>
    <string name="tab_text_15">Ifa</string>
    <string name="tab_text_16">Oxala</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elegbara">Elegbara</string>
    <string name="ogum">Ogum</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation_orixas">NavigationOrixas</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="no">Nao</string>
    <string name="yes">Sim</string>
    <string name="startText">Iniciar</string>


</resources>
